# local-strava

./: .gitignore  Cargo.toml  README.md
.claude/skills/local-strava/: SKILL.md
assets/: profile_messages.json  profile_types.json
skills/strata/: SKILL.md
src/: main.rs
src/cli/: mod.rs
src/db/: duckdb_store.rs  mod.rs  models.rs  sqlite.rs
src/domain/: activity.rs  export_batch.rs  mod.rs
src/importers/: strava.rs
src/services/: consistency.rs  decompress.rs  export.rs  fit_ingest.rs  fit_schema.rs  incremental.rs  layout.rs  mod.rs  naming.rs  sync.rs
src/storage/: export_log.rs  index_store.rs  mod.rs
src/utils/: fs.rs
