[package]
name = "local-strava"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
csv = "1.3"
flate2 = "1.1"
rayon = "1.11.0"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = { version = "2", default-features = false, features = ["deflate"] }
fitparser = "0.10"
duckdb = { version = "1", features = ["bundled"] }
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
